# RAG-pinecone-serverless

./: .env.example  README.md  antropic_chain.py  pyproject.toml  server.py  test_app.ipynb
.ipynb_checkpoints/: test_app-checkpoint.ipynb
app/: chain.py  server.py
