[tool.poetry]
name = "rag-pinecone-serverless"
version = "0.1.0"
description = "A serverless application using RAG with Pinecone for vector storage."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
pinecone-client = "3.2.2"
cohere = "5.3.0"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
langchain-community = ">=0.0.13,<0.1"
jupyter = "^1.0.0"
langchain-cohere = "^0.1.4"
langchain-openai = "^0.1.6"
langchain = "^0.1.20"
langchain-pinecone = "^0.1.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
